Extrude To Cursor tool in Mesh Edit snaps to faces it should ignore with Face Project #104587

Closed
opened 2023-02-10 19:25:04 +01:00 by Rich-Edwards · 2 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1650/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 516.94

Blender Version
Broken: version: 3.4.1, branch: blender-v3.4-release, commit date: 2022-12-19 17:00, hash: rB55485cb379f7
Worked: (unknown)

Short description of error
Using Face Project snapping mode, using Extrude To Cursor will project to faces that the settings mean should be excluded. Extrude Region tool does exclude faces correctly.

Exact steps for others to reproduce the error
-add a plane and move it away from default cube, and scale it down (eg 0.2)

-set default cube non-selectable

Enable Face Project snapping in the plane's Edit Mode:
-snap with closest
All other snap options OFF except:
-Include Non-Edited
-Exclude Non-Selectable

Affect: Move

now select an edge of the plane and use 'Extrude Region' tool to extrude it so it intersects the cube- no snapping takes place

do the same with 'Extrude To Cursor' - extrusion DOES snap to cube.

The same effect happens with the cube selectable, but both objects in Edit Mode, which settings mean should exclude the cube. Be sure to select the cube then the plane before entering edit mode.

If the cube is selected last it all works as it should, which leads me to think the setting 'Include Active'(set to off) is working as intended. Just not 'Include Edited' (set to off)

**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1650/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 516.94 **Blender Version** Broken: version: 3.4.1, branch: blender-v3.4-release, commit date: 2022-12-19 17:00, hash: `rB55485cb379f7` Worked: (unknown) **Short description of error** Using Face Project snapping mode, using Extrude To Cursor will project to faces that the settings mean should be excluded. Extrude Region tool *does* exclude faces correctly. **Exact steps for others to reproduce the error** -add a plane and move it away from default cube, and scale it down (eg 0.2) -set default cube non-selectable Enable Face Project snapping in the plane's Edit Mode: -snap with closest All other snap options OFF except: -Include Non-Edited -Exclude Non-Selectable Affect: Move now select an edge of the plane and use 'Extrude Region' tool to extrude it so it intersects the cube- no snapping takes place do the same with 'Extrude To Cursor' - extrusion DOES snap to cube. The same effect happens with the cube selectable, but both objects in Edit Mode, which settings mean should exclude the cube. Be sure to select the cube then the plane before entering edit mode. If the cube is selected last it all works as it should, which leads me to think the setting 'Include Active'(set to off) is working as intended. Just not 'Include Edited' (set to off)
Rich-Edwards added the
Priority
Normal
Status
Needs Triage
Type
Report
labels 2023-02-10 19:25:04 +01:00
Germano Cavalcante added
Module
Modeling
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-02-10 21:36:01 +01:00

Extrude To Cursor is not one of the transform operators.
But since it reads the snapping settings, it should read the Target Selection as well.

This just wasn't implemented for this operator.

`Extrude To Cursor` is not one of the transform operators. But since it reads the snapping settings, it should read the `Target Selection` as well. This just wasn't implemented for this operator.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-02-11 19:21:56 +01:00
Author

Hi, thanks for giving this some attention! I noticed though when I load the bug report .blend in 3.5 and start extruding to cursor it doesn't snap to the plane any more as I'd expect (it does in 3.4.1)

Hi, thanks for giving this some attention! I noticed though when I load the bug report .blend in 3.5 and start extruding to cursor it doesn't snap to the plane any more as I'd expect (it does in 3.4.1)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#104587
No description provided.