Fix #104587: 'Extrude To Cursor' snapping ignoring 'Target Selection'

Although not a transform operator, `Extrude to Cursor` depends on some
snapping settings.

So it should use the `Target Selection` options as well.